<resources>
    <string name="app_name">EduBot</string>
    <string name="selectDevice">ডিভাইস নির্বাচন করুন</string>
    <string name="login">LogIn</string>
    <string name="register_now">Register Now!</string>
    <string name="your_password">Your Password</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to Login</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bangla_main">BanglaMain</string>
    <string name="title_activity_bangla">BanglaActivity</string>
    <string name="take_pic">ছবি তুলো</string>
    <string name="todo">todo</string>
    <string name="Title_ofthe_text">সনাক্তকিত লেখার শিরোনাম দেন</string>
    <string name="send_data">তথ্য রোবটে সংরক্ষণ কর</string>
    <string name="forget_password">Forget Password</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="problem_subject">Problem Subject</string>
    <string name="speak">কথা বল</string>
    <string name="stop_speak">কথা বন্ধ কর</string>
    <string name="selflearn_text">আমাকে কি শিখাতে চান? নিচের প্রথম বাটন দিয়ে \n আমাকে আগে প্রশ্ন শিখান এরপর দ্বিতীয় বাটন দিয়ে \n আমকে উত্তর শিখান।</string>
    <string name="teach_question">প্রশ্ন শিখাও</string>
    <string name="teach_answer">উত্তর শিখাও</string>
    <string name="start_talking">Start Talking</string>
    <string name="stop_talking">Stop Talking</string>
    <string name="mukti">MUKTI</string>
</resources>