<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    tools:context=".bangla.ScanActivityBangla">

    <ImageView
        android:id="@+id/imageId"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doProcess"
        android:text="@string/take_pic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textId"/>

    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Title_ofthe_text"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_data" />


</LinearLayout>