<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".HelpActivity">

    <EditText
        android:id="@+id/email_subject"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/problem_subject"
        android:background="@drawable/editshap"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/email_message"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/editshap"
        android:layout_below="@+id/email_subject"
        android:ems="10"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/message"
        android:textAllCaps="false"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/email_message"
        android:text="@string/send"
        android:layout_centerHorizontal="true"
        android:background="@drawable/editshap"/>
</RelativeLayout>